# culoco

./: .gitmodules  CHANGELOG.md  pyproject.toml  setup.cfg  setup.py
examples/isaac_sim/: helper.py  stand_b1_z1.py  stand_go2.py  stand_go2_arx.py
foam_sphere/: calfb-spheres.json  hipb-spheres.json  sphere_database.json  spherized.urdf  thigh_mirrorb-spheres.json  thighb-spheres.json  trunkb-spheres.json  z1_GripperMover-spheres.json  z1_GripperStator-spheres.json  z1_Link00-spheres.json  z1_Link01-spheres-complex.json  z1_Link02-spheres.json  z1_Link03-spheres.json  z1_Link04-spheres.json  z1_Link05-spheres.json  z1_Link06-spheres.json
foam_sphere/z1/: sphere_database.json  spherized.urdf
src/: curobo
src/culoco/: __init__.py
src/culoco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/culoco/content/assets/robot/B1_Z1/urdf/: b1.urdf  z1.urdf
src/culoco/content/assets/robot/go2/urdf/: go2_description.urdf  go2_description_temp.usd
src/culoco/content/configs/robot/: b1_z1.yml  go2.yml  go2_arx.yml
src/culoco/content/configs/robot/spheres/: b1_z1_mesh.yml  go2_mesh.yml  go2_spherized.urdf
src/culoco/cuda_loco_robot_model/: cuda_loco_generator.py  cuda_loco_generator_abandon.py  cuda_loco_model.py  cuda_loco_model_abandon.py  cuda_robot_generator.py  cuda_robot_model.py  type.py
src/culoco/culocolib/: loco_kinematics.py
src/culoco/types/: robot.py
test/: test_kinematic.py
verification/pinocchio_kinematic/: CMakeLists.txt  pinocchio_kinematic.cpp
(+1 files in other folders)
